# StolasLog

./: .codacy.yml  .codecov.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/: config.yml  dependabot.yml  issue_label_bot.yaml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATES/: 1-bug-report.md  2-feature-request.md  3-docs-report.md  4-enhancement-request.md  5-question-support.md  config.yml
.github/workflows/: codeql.yaml  docs.yaml  publish.yaml  tests.yaml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_static/css/: stolaslog.css
docs/source/_static/js/: copybutton.js
docs/source/_templates/: layout.html
docs/source/project/: changelog.rst
src/stolas_log/: __init__.py  exceptions.py  types.py
src/stolas_log/configs/: __init__.py  models.py
src/tools/: cz_stolaslog.py
tests/unit/: test_config_models.py  test_exceptions.py  test_types.py
